--- a/frontend/public/scss/components/_bumper.scss
+++ b/frontend/public/scss/components/_bumper.scss
@@ -238,47 +238,47 @@
   
   // }
   
-  .slider-bumper {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  // .slider-bumper {
+  //   position: relative;
+  //   height: 100vh;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
   
-  }
+  // }
   
-  .image {
-    width: 1000px;
-    height: 600px;
-    border-radius: 10px;
-  }
+  // .image {
+  //   width: 1000px;
+  //   height: 600px;
+  //   border-radius: 10px;
+  // }
   
-  .arrow {
-    position: absolute;
-    top: 50%;
-    font-size: 3rem;
-    color: #000; 
-    z-index: 10;
-    cursor: pointer;
-    user-select:none; 
+  // .arrow {
+  //   position: absolute;
+  //   top: 50%;
+  //   font-size: 3rem;
+  //   color: #000; 
+  //   z-index: 10;
+  //   cursor: pointer;
+  //   user-select:none; 
   
-    &--right {
-      right: 32px;
-    }
+  //   &--right {
+  //     right: 32px;
+  //   }
   
-    &--left {
-      left: 32px;
-    }
-  }
+  //   &--left {
+  //     left: 32px;
+  //   }
+  // }
   
-  .slide {
-    opacity: 0;
-    transition-duration: 1s ease;
-    &.active {
-      opacity: 1; 
-      transition-duration: 1s;
-      transform: scale(1.08);
-    }
-  }
+  // .slide {
+  //   opacity: 0;
+  //   transition-duration: 1s ease;
+  //   &.active {
+  //     opacity: 1; 
+  //     transition-duration: 1s;
+  //     transform: scale(1.08);
+  //   }
+  // }
   
   
