--- a/frontend/public/scss/components/_product-display.scss
+++ b/frontend/public/scss/components/_product-display.scss
@@ -1,115 +1,115 @@
-.product-display {
-    display: flex;
-    flex-direction: column;
+// .product-display {
+//     display: flex;
+//     flex-direction: column;
 
-    &__grid {
-    // display: grid;
-    // grid-auto-rows: minmax(10rem, auto);
-    // grid-template-columns: repeat(2, 1fr);
-    // grid-template-areas: "full-1 full-1"
-    //                      "half-1 half-2"
-    //                      "full-2 full-2"
-    //                      "full-2 full-2";
-    // grid-gap: 1.5rem;
+//     &__grid {
+//     // display: grid;
+//     // grid-auto-rows: minmax(10rem, auto);
+//     // grid-template-columns: repeat(2, 1fr);
+//     // grid-template-areas: "full-1 full-1"
+//     //                      "half-1 half-2"
+//     //                      "full-2 full-2"
+//     //                      "full-2 full-2";
+//     // grid-gap: 1.5rem;
 
-    display: grid;
-    height: 170vw;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 2fr 4fr;
-    gap: 15px 15px;
-    grid-template-areas: "full-1 full-1"
-                         "half-1 half-2"
-                         "full-2 full-2"
-                         "full-2 full-2";
-
-
-    width: 100%;
-    margin-bottom: 2rem;
-    }
-
-    &-img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-
-        &--1 {
-            grid-area: full-1;
-        }
-        &--2 {
-            grid-area: half-1;
-        }
-        &--3 {
-            grid-area: half-2;
-        }
-        &--4 {
-            grid-area: full-2;
-        }
-    }
-
-    &__details {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        min-height: 26rem;
+//     display: grid;
+//     height: 170vw;
+//     grid-template-columns: 1fr 1fr;
+//     grid-template-rows: 2fr 2fr 4fr;
+//     gap: 15px 15px;
+//     grid-template-areas: "full-1 full-1"
+//                          "half-1 half-2"
+//                          "full-2 full-2"
+//                          "full-2 full-2";
 
 
+//     width: 100%;
+//     margin-bottom: 2rem;
+//     }
 
-        .product-heading{
-            font-size: 5vw;
-            text-transform: uppercase; 
-        }
+//     &-img{
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//         display: block;
 
-        .product__price-desc {
-            display: flex;
-            font-size: 1.5rem;
+//         &--1 {
+//             grid-area: full-1;
+//         }
+//         &--2 {
+//             grid-area: half-1;
+//         }
+//         &--3 {
+//             grid-area: half-2;
+//         }
+//         &--4 {
+//             grid-area: full-2;
+//         }
+//     }
 
-            .price {
-                margin-right: 2rem;
-            }
-
-            .desc {
-                color: #cecece;
-            }
-        }
-
-        .product-display__color-selector {
-            .color-heading {
-                font-size: 1.5rem;
-                font-weight: 300;
-            }
-
-            .product-color {
-                height: 3rem;
-                width: 3rem;
-                background-color: tan;
-                display: block;
-                border-radius: 100%;
-            }
-        }
-
-        .product-display__cta {
-            background-color: white;
-            min-height: 22rem;
-            padding: 3.5rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-content: stretch;
-            justify-items: inherit;
-            align-items: flex-start;
-
-            .product-cta-subheading {
-                font-size: 1.5rem;
-                color: grey
-            }
+//     &__details {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-around;
+//         min-height: 26rem;
 
 
-            h2 {
-                font-size: 2rem;
-            }
-        }
+
+//         .product-heading{
+//             font-size: 5vw;
+//             text-transform: uppercase; 
+//         }
+
+//         .product__price-desc {
+//             display: flex;
+//             font-size: 1.5rem;
+
+//             .price {
+//                 margin-right: 2rem;
+//             }
+
+//             .desc {
+//                 color: #cecece;
+//             }
+//         }
+
+//         .product-display__color-selector {
+//             .color-heading {
+//                 font-size: 1.5rem;
+//                 font-weight: 300;
+//             }
+
+//             .product-color {
+//                 height: 3rem;
+//                 width: 3rem;
+//                 background-color: tan;
+//                 display: block;
+//                 border-radius: 100%;
+//             }
+//         }
+
+//         .product-display__cta {
+//             background-color: white;
+//             min-height: 22rem;
+//             padding: 3.5rem;
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: space-around;
+//             align-content: stretch;
+//             justify-items: inherit;
+//             align-items: flex-start;
+
+//             .product-cta-subheading {
+//                 font-size: 1.5rem;
+//                 color: grey
+//             }
 
 
-    }
-}
+//             h2 {
+//                 font-size: 2rem;
+//             }
+//         }
+
+
+//     }
+// }
