--- a/frontend/public/scss/layout/_navigation.scss
+++ b/frontend/public/scss/layout/_navigation.scss
@@ -1,75 +1,75 @@
 
   
-  .menu-modal {
-    // display: none;
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    position: fixed; 
-    z-index: 999;
-    background-image: url(../../assets/img/menu-background.jpg);
-    background-size: cover;
+  // .menu-modal {
+  //   // display: none;
+  //   display: flex;
+  //   flex-direction: column;
+  //   width: 100vw;
+  //   height: 100vh;
+  //   position: fixed; 
+  //   z-index: 999;
+  //   background-image: url(../../assets/img/menu-background.jpg);
+  //   background-size: cover;
   
-    .exit-nav {
-      padding: 2rem;
-    }
+  //   .exit-nav {
+  //     padding: 2rem;
+  //   }
   
-    &__content {
-      height: 100%;
-      width: 100%;
-      background-color: rgba(255, 255, 255, .84);
+  //   &__content {
+  //     height: 100%;
+  //     width: 100%;
+  //     background-color: rgba(255, 255, 255, .84);
   
-    }
+  //   }
   
-    &__links {
-      padding: 10rem 3rem;   
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+  //   &__links {
+  //     padding: 10rem 3rem;   
+  //     height: 100%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: center;
       
-    }
+  //   }
   
-    .home-link {
-      margin-bottom: 2rem;
-      text-transform: uppercase;
-    }
+  //   .home-link {
+  //     margin-bottom: 2rem;
+  //     text-transform: uppercase;
+  //   }
   
-    .link-list {
-      &__item {
-        font-size: 2.5rem;
-        margin-bottom: 7rem;
-        &:not(:last-child) {
-          margin-bottom: 1rem;
-        }
-      }
-    }
+  //   .link-list {
+  //     &__item {
+  //       font-size: 2.5rem;
+  //       margin-bottom: 7rem;
+  //       &:not(:last-child) {
+  //         margin-bottom: 1rem;
+  //       }
+  //     }
+  //   }
   
-    .hidden-list {
-      display: none;
-    }
+  //   .hidden-list {
+  //     display: none;
+  //   }
   
-    .fact-links {
+  //   .fact-links {
       
       
-      &__list-items {
-        text-transform: uppercase;
-        font-size: 1.4rem;
+  //     &__list-items {
+  //       text-transform: uppercase;
+  //       font-size: 1.4rem;
   
-        &:not(:last-child) {
-          margin-bottom: 1rem;
-        }
-      }
+  //       &:not(:last-child) {
+  //         margin-bottom: 1rem;
+  //       }
+  //     }
   
-    }
+  //   }
   
-    &__social-links {
-      height: 10rem;
-      width: 100%;
-      background-color: black;
-    }
-  }
+  //   &__social-links {
+  //     height: 10rem;
+  //     width: 100%;
+  //     background-color: black;
+  //   }
+  // }
   
   
   
