--- a/frontend/public/scss/pages/_home.scss
+++ b/frontend/public/scss/pages/_home.scss
@@ -16,123 +16,122 @@
   
   }
   
-  .hero-slider {
-    background-image: url("../../assets/img/latest-couch.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    padding: 11rem 4rem 3rem 4rem;
-    margin-bottom: 3rem; 
+  // .hero-slider {
+  //   background-image: url("../../assets/img/latest-couch.jpg");
+  //   background-size: cover;
+  //   background-position: center;
+  //   height: 100%;
+  //   padding: 11rem 4rem 3rem 4rem;
+  //   margin-bottom: 3rem; 
   
-    @media screen and (min-width: 767px) {
-      // height: 100vh;
-      padding: 11rem 4rem 10rem 4rem;
-      background-position: 95%; 
-    } 
+  //   @media screen and (min-width: 767px) {
+  //     // height: 100vh;
+  //     padding: 11rem 4rem 10rem 4rem;
+  //     background-position: 95%; 
+  //   } 
   
-    @media screen and (min-width: 991px) {
-      padding: 11rem 4rem 10rem 16rem;
-    }
+  //   @media screen and (min-width: 991px) {
+  //     padding: 11rem 4rem 10rem 16rem;
+  //   }
     
-    @media screen and (min-width: 1024px) {
-      background-position: 98.4%;
-      padding: 11rem 4rem 10rem 14.4rem;
-    }
+  //   @media screen and (min-width: 1024px) {
+  //     background-position: 98.4%;
+  //     padding: 11rem 4rem 10rem 14.4rem;
+  //   }
     
   
-    .title-box {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      color: white;
-      width: 58%;
+  //   .title-box {
+  //     height: 100%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: flex-end;
+  //     color: white;
+  //     width: 58%;
   
       
   
-      &__category {
-        margin-bottom: 1.5rem;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        font-weight: 400;
-        letter-spacing: .1rem;
-      }
+  //     &__category {
+  //       margin-bottom: 1.5rem;
+  //       font-size: 1.5rem;
+  //       text-transform: uppercase;
+  //       font-weight: 400;
+  //       letter-spacing: .1rem;
+  //     }
   
-      &__heading {
-        margin-bottom: 2.8rem;
-        font-weight: 400;
-        font-size: 5.5vw;
-        // letter-spacing: .05rem;
+  //     &__heading {
+  //       margin-bottom: 2.8rem;
+  //       font-weight: 400;
+  //       font-size: 5.5vw;
+  //       // letter-spacing: .05rem;
   
-        @media screen and (min-width: 375px){
-          margin-bottom: 1.8rem;
-        }
+  //       @media screen and (min-width: 375px){
+  //         margin-bottom: 1.8rem;
+  //       }
   
-        @media screen and (min-width: 768px) {
-          font-size: 2vw;
-       }
+  //       @media screen and (min-width: 768px) {
+  //         font-size: 2vw;
+  //      }
   
-        // @media screen and (min-width: 991px) {
-        //    font-size: 2vw;
-        // }
-      }
+  //       // @media screen and (min-width: 991px) {
+  //       //    font-size: 2vw;
+  //       // }
+  //     }
   
-      &__cta{
-        display: flex;
-        align-items: center;
-        margin-bottom: 3rem;
-        font-weight: 600;
+  //     &__cta{
+  //       display: flex;
+  //       align-items: center;
+  //       margin-bottom: 3rem;
+  //       font-weight: 600;
   
-        @media screen and (min-width: 991px){
-          margin-bottom: 6rem;
-        }
+  //       @media screen and (min-width: 991px){
+  //         margin-bottom: 6rem;
+  //       }
   
-        &-arrow {
-          border: solid 1px grey;
-          width: 5rem;
-          height: 5rem;
-          border-radius: 100%;
-          display: inline-block;
-          margin-right: 1rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
+  //       &-arrow {
+  //         border: solid 1px grey;
+  //         padding: 2rem;
+  //         border-radius: 100%;
+  //         display: inline-block;
+  //         margin-right: 1rem;
+  //         display: flex;
+  //         justify-content: center;
+  //         align-items: center;
   
-          img {
-            width: 1.8rem;
-          }
-        }
+  //         img {
+  //           width: 1.8rem;
+  //         }
+  //       }
   
-      }
+  //     }
        
-      a {
-        text-transform: uppercase;
-        color: #d60808;
-        font-size: 1.5rem;
-        letter-spacing: .2rem;
-        line-height: 1.5rem;
+  //     a {
+  //       text-transform: uppercase;
+  //       color: #d60808;
+  //       font-size: 1.5rem;
+  //       letter-spacing: .2rem;
+  //       line-height: 1.5rem;
   
-      }
-    }
+  //     }
+  //   }
   
   
-    .slider-links {
+  //   .slider-links {
         
-      .slider-dots {
-        background-color: grey;
-        display: inline-block;
-        width: 1.5rem;
-        height: 1.5rem;
-        border-radius: 100%;
-        margin-right: .5rem;
+  //     .slider-dots {
+  //       background-color: grey;
+  //       display: inline-block;
+  //       width: 1.5rem;
+  //       height: 1.5rem;
+  //       border-radius: 100%;
+  //       margin-right: .5rem;
   
-        &:active {
+  //       &:active {
   
-        }
-      }
-    }
+  //       }
+  //     }
+  //   }
   
-  }
+  // }
   
   .section-products {
     @media screen and (min-width: 768px) {
