--- a/frontend/public/scss/pages/_home.scss
+++ b/frontend/public/scss/pages/_home.scss
@@ -1,325 +1,325 @@
-.homepage {
-  grid-column: 2/3;
-}
+// .homepage {
+//   grid-column: 2/3;
+// }
 
-.section-latest {
-    height: 40rem;
-    margin-bottom: 5rem;
+// .section-latest {
+//     height: 40rem;
+//     margin-bottom: 5rem;
   
-    @media screen and (min-width: 767px)  {
-      height: 100vh;
-    }
+//     @media screen and (min-width: 767px)  {
+//       height: 100vh;
+//     }
   
-    @media screen and (min-width: 991px)  {
-      padding: 8rem;
-    }
+//     @media screen and (min-width: 991px)  {
+//       padding: 8rem;
+//     }
   
-  }
+//   }
   
-  // .hero-slider {
-  //   background-image: url("../../assets/img/latest-couch.jpg");
-  //   background-size: cover;
-  //   background-position: center;
-  //   height: 100%;
-  //   padding: 11rem 4rem 3rem 4rem;
-  //   margin-bottom: 3rem; 
+//   // .hero-slider {
+//   //   background-image: url("../../assets/img/latest-couch.jpg");
+//   //   background-size: cover;
+//   //   background-position: center;
+//   //   height: 100%;
+//   //   padding: 11rem 4rem 3rem 4rem;
+//   //   margin-bottom: 3rem; 
   
-  //   @media screen and (min-width: 767px) {
-  //     // height: 100vh;
-  //     padding: 11rem 4rem 10rem 4rem;
-  //     background-position: 95%; 
-  //   } 
+//   //   @media screen and (min-width: 767px) {
+//   //     // height: 100vh;
+//   //     padding: 11rem 4rem 10rem 4rem;
+//   //     background-position: 95%; 
+//   //   } 
   
-  //   @media screen and (min-width: 991px) {
-  //     padding: 11rem 4rem 10rem 16rem;
-  //   }
+//   //   @media screen and (min-width: 991px) {
+//   //     padding: 11rem 4rem 10rem 16rem;
+//   //   }
     
-  //   @media screen and (min-width: 1024px) {
-  //     background-position: 98.4%;
-  //     padding: 11rem 4rem 10rem 14.4rem;
-  //   }
+//   //   @media screen and (min-width: 1024px) {
+//   //     background-position: 98.4%;
+//   //     padding: 11rem 4rem 10rem 14.4rem;
+//   //   }
     
   
-  //   .title-box {
-  //     height: 100%;
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: flex-end;
-  //     color: white;
-  //     width: 58%;
+//   //   .title-box {
+//   //     height: 100%;
+//   //     display: flex;
+//   //     flex-direction: column;
+//   //     justify-content: flex-end;
+//   //     color: white;
+//   //     width: 58%;
   
       
   
-  //     &__category {
-  //       margin-bottom: 1.5rem;
-  //       font-size: 1.5rem;
-  //       text-transform: uppercase;
-  //       font-weight: 400;
-  //       letter-spacing: .1rem;
-  //     }
+//   //     &__category {
+//   //       margin-bottom: 1.5rem;
+//   //       font-size: 1.5rem;
+//   //       text-transform: uppercase;
+//   //       font-weight: 400;
+//   //       letter-spacing: .1rem;
+//   //     }
   
-  //     &__heading {
-  //       margin-bottom: 2.8rem;
-  //       font-weight: 400;
-  //       font-size: 5.5vw;
-  //       // letter-spacing: .05rem;
+//   //     &__heading {
+//   //       margin-bottom: 2.8rem;
+//   //       font-weight: 400;
+//   //       font-size: 5.5vw;
+//   //       // letter-spacing: .05rem;
   
-  //       @media screen and (min-width: 375px){
-  //         margin-bottom: 1.8rem;
-  //       }
+//   //       @media screen and (min-width: 375px){
+//   //         margin-bottom: 1.8rem;
+//   //       }
   
-  //       @media screen and (min-width: 768px) {
-  //         font-size: 2vw;
-  //      }
+//   //       @media screen and (min-width: 768px) {
+//   //         font-size: 2vw;
+//   //      }
   
-  //       // @media screen and (min-width: 991px) {
-  //       //    font-size: 2vw;
-  //       // }
-  //     }
+//   //       // @media screen and (min-width: 991px) {
+//   //       //    font-size: 2vw;
+//   //       // }
+//   //     }
   
-  //     &__cta{
-  //       display: flex;
-  //       align-items: center;
-  //       margin-bottom: 3rem;
-  //       font-weight: 600;
+//   //     &__cta{
+//   //       display: flex;
+//   //       align-items: center;
+//   //       margin-bottom: 3rem;
+//   //       font-weight: 600;
   
-  //       @media screen and (min-width: 991px){
-  //         margin-bottom: 6rem;
-  //       }
+//   //       @media screen and (min-width: 991px){
+//   //         margin-bottom: 6rem;
+//   //       }
   
-  //       &-arrow {
-  //         border: solid 1px grey;
-  //         padding: 2rem;
-  //         border-radius: 100%;
-  //         display: inline-block;
-  //         margin-right: 1rem;
-  //         display: flex;
-  //         justify-content: center;
-  //         align-items: center;
+//   //       &-arrow {
+//   //         border: solid 1px grey;
+//   //         padding: 2rem;
+//   //         border-radius: 100%;
+//   //         display: inline-block;
+//   //         margin-right: 1rem;
+//   //         display: flex;
+//   //         justify-content: center;
+//   //         align-items: center;
   
-  //         img {
-  //           width: 1.8rem;
-  //         }
-  //       }
+//   //         img {
+//   //           width: 1.8rem;
+//   //         }
+//   //       }
   
-  //     }
+//   //     }
        
-  //     a {
-  //       text-transform: uppercase;
-  //       color: #d60808;
-  //       font-size: 1.5rem;
-  //       letter-spacing: .2rem;
-  //       line-height: 1.5rem;
+//   //     a {
+//   //       text-transform: uppercase;
+//   //       color: #d60808;
+//   //       font-size: 1.5rem;
+//   //       letter-spacing: .2rem;
+//   //       line-height: 1.5rem;
   
-  //     }
-  //   }
+//   //     }
+//   //   }
   
   
-  //   .slider-links {
+//   //   .slider-links {
         
-  //     .slider-dots {
-  //       background-color: grey;
-  //       display: inline-block;
-  //       width: 1.5rem;
-  //       height: 1.5rem;
-  //       border-radius: 100%;
-  //       margin-right: .5rem;
+//   //     .slider-dots {
+//   //       background-color: grey;
+//   //       display: inline-block;
+//   //       width: 1.5rem;
+//   //       height: 1.5rem;
+//   //       border-radius: 100%;
+//   //       margin-right: .5rem;
   
-  //       &:active {
+//   //       &:active {
   
-  //       }
-  //     }
-  //   }
+//   //       }
+//   //     }
+//   //   }
   
-  // }
+//   // }
   
-  .section-products {
-    @media screen and (min-width: 768px) {
-      padding: 6rem;
-    }
-  }
+//   .section-products {
+//     @media screen and (min-width: 768px) {
+//       padding: 6rem;
+//     }
+//   }
   
   
-  .product-gallery {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+//   .product-gallery {
+//     padding: 1rem;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: space-evenly;
   
-    @media screen and (min-width: 1043px) {
+//     @media screen and (min-width: 1043px) {
      
-        display: grid;
-        min-height: 70rem;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 19px 20px;
-        grid-template-areas:
-          "1 2 3"
-          "4 5 6";
+//         display: grid;
+//         min-height: 70rem;
+//         grid-template-columns: 1fr 1fr 1fr;
+//         grid-template-rows: 1fr 1fr;
+//         gap: 19px 20px;
+//         grid-template-areas:
+//           "1 2 3"
+//           "4 5 6";
   
-          .product-gallery__item:first-child{
-            grid-column: 1 / span 2;
-          }
+//           .product-gallery__item:first-child{
+//             grid-column: 1 / span 2;
+//           }
   
-          // .product-gallery__item {
-          //   height: 100%;
-          // }
+//           // .product-gallery__item {
+//           //   height: 100%;
+//           // }
       
-    }
-  }
+//     }
+//   }
   
-  .section-news{
-    padding: 2rem;
+//   // .section-news{
+//   //   padding: 2rem;
   
-    @media screen and (min-width: 768px) {
-      padding: 6rem;
+//   //   @media screen and (min-width: 768px) {
+//   //     padding: 6rem;
   
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 35px 35px;
-        grid-template-areas:
-          ". ."
-          ". .";
-    }
+//   //       display: grid;
+//   //       grid-template-columns: 1fr 1fr;
+//   //       grid-template-rows: 1fr 1fr;
+//   //       gap: 35px 35px;
+//   //       grid-template-areas:
+//   //         ". ."
+//   //         ". .";
+//   //   }
   
-    @media screen and (min-width: 1024px){
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr;
-      gap: 2.5rem 4rem;
-      grid-template-areas:
-        ". . .";
-    }
-  }
+//   //   @media screen and (min-width: 1024px){
+//   //     grid-template-columns: 1fr 1fr 1fr;
+//   //     grid-template-rows: 1fr;
+//   //     gap: 2.5rem 4rem;
+//   //     grid-template-areas:
+//   //       ". . .";
+//   //   }
+//   // }
   
   
-  .section-social {
-    padding: 9rem 0;
-    text-align: center;
+//   .section-social {
+//     padding: 9rem 0;
+//     text-align: center;
   
-    @media screen and (min-width: 2560px){
-      padding: 9rem 45rem;
-    }
+//     @media screen and (min-width: 2560px){
+//       padding: 9rem 45rem;
+//     }
     
-    span {
-      background-color: #b31414;
-      height: .2rem;
-      width: 4rem;
-      margin-bottom: 4rem; 
-      display: block;
-      margin: 0 auto;
-    }
+//     span {
+//       background-color: #b31414;
+//       height: .2rem;
+//       width: 4rem;
+//       margin-bottom: 4rem; 
+//       display: block;
+//       margin: 0 auto;
+//     }
   
-    .section-social__heading {
-      text-align: center;
-      font-size: 3.5rem;
-      font-weight: 500;
-      margin-top: 2rem;
-    }
-  }
+//     .section-social__heading {
+//       text-align: center;
+//       font-size: 3.5rem;
+//       font-weight: 500;
+//       margin-top: 2rem;
+//     }
+//   }
   
-  .section-contact{
-    padding: 2rem;
-    text-align: center;
+//   .section-contact{
+//     padding: 2rem;
+//     text-align: center;
   
-    h2 {
-      font-size: 3rem;
-      margin-bottom: 4rem;
-      font-weight: 500;
-    }
+//     h2 {
+//       font-size: 3rem;
+//       margin-bottom: 4rem;
+//       font-weight: 500;
+//     }
   
-    h3{
-      font-size: 1.5rem;
-      font-weight: 500;
-      letter-spacing: .16rem;
-      margin-bottom: 2rem;
-      text-transform: uppercase;
-    }
-  }
+//     h3{
+//       font-size: 1.5rem;
+//       font-weight: 500;
+//       letter-spacing: .16rem;
+//       margin-bottom: 2rem;
+//       text-transform: uppercase;
+//     }
+//   }
   
-  footer {
-    max-height: 51rem;
-    display: flex;
-    flex-direction: column;
+//   footer {
+//     max-height: 51rem;
+//     display: flex;
+//     flex-direction: column;
   
-    img {
-      margin-bottom: 2.5rem;
-      width: 10rem;
-    }
+//     img {
+//       margin-bottom: 2.5rem;
+//       width: 10rem;
+//     }
   
-    .credit-box {
-      margin-bottom: 2rem;
+//     .credit-box {
+//       margin-bottom: 2rem;
   
-      p:not(:last-child){
-        margin-bottom: .5rem;
-      }
-    }
+//       p:not(:last-child){
+//         margin-bottom: .5rem;
+//       }
+//     }
   
-    .icons-container {
-      display: flex;
-      margin-bottom: 2rem;
-    }
+//     .icons-container {
+//       display: flex;
+//       margin-bottom: 2rem;
+//     }
   
-    .social-icons {
-      border: solid 1px grey;
-      width: 2rem;
-      height: 2rem;
-      margin-right: 1rem;
-    }
+//     .social-icons {
+//       border: solid 1px grey;
+//       width: 2rem;
+//       height: 2rem;
+//       margin-right: 1rem;
+//     }
   
-    .upper-footer{
-      flex: 3;
-      background-color: #0e0e0e;
-      text-align: center;
-      color: grey;
-      font-size: 1.2rem;
-      justify-content: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1rem;
-      min-height: 25rem;
+//     .upper-footer{
+//       flex: 3;
+//       background-color: #0e0e0e;
+//       text-align: center;
+//       color: grey;
+//       font-size: 1.2rem;
+//       justify-content: center;
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
+//       padding: 1rem;
+//       min-height: 25rem;
   
-      &__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
+//       &__content {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: space-evenly;
   
-        @media screen and (min-width: 1024px){
-          width: 100%;
-          flex-direction: row;
+//         @media screen and (min-width: 1024px){
+//           width: 100%;
+//           flex-direction: row;
   
-        }
-      }
-    }
+//         }
+//       }
+//     }
   
-    .lower-footer {
-      display: flex;
-      flex-direction: column;
-      flex: 4;
-      background-color: black;
-      padding: 4rem;
+//     .lower-footer {
+//       display: flex;
+//       flex-direction: column;
+//       flex: 4;
+//       background-color: black;
+//       padding: 4rem;
   
-      @media screen and (min-width: 768px){
-        flex-direction: row;
-        justify-content: space-evenly;
-      }
+//       @media screen and (min-width: 768px){
+//         flex-direction: row;
+//         justify-content: space-evenly;
+//       }
   
   
       
-      li {
-        color: #848383;
-        list-style: none;
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 1.2rem;
-        font-weight: 500;
+//       li {
+//         color: #848383;
+//         list-style: none;
+//         text-align: center;
+//         text-transform: uppercase;
+//         font-size: 1.2rem;
+//         font-weight: 500;
       
-        &:not(:last-child){
-          margin-bottom: 2rem;
-        }
-      }
-    }
-  }
+//         &:not(:last-child){
+//           margin-bottom: 2rem;
+//         }
+//       }
+//     }
+//   }
